Fix z-index bug of finalist and make release 3

--- a/src/jquery.bracket.sass
+++ b/src/jquery.bracket.sass
@@ -71,6 +71,7 @@ div.jQBracket
 
   .team
     position: relative
+    z-index: 1
     float: left
     background-color: #666
     color: #FFF
